Fixing parameterized artifact name

--- a/.github/workflows/build_and_deploy_lambda.yml
+++ b/.github/workflows/build_and_deploy_lambda.yml
@@ -63,8 +63,7 @@ jobs:
             - name: Archive and Publish
               run: |
                 zip -r ./${{ inputs.artifact-name}}.zip ./prod ./package.json
-                ls -lha
-                aws s3 cp ./event-publisher.zip s3://${{ inputs.s3-bucket-name }}/artifacts/$(echo ${{ inputs.environment-name }} | awk '{print tolower($0)}')/${{ github.run_number }}/${{ inputs.artifact-name}}.zip
+                aws s3 cp ./${{ inputs.artifact-name}}.zip s3://${{ inputs.s3-bucket-name }}/artifacts/$(echo ${{ inputs.environment-name }} | awk '{print tolower($0)}')/${{ github.run_number }}/${{ inputs.artifact-name}}.zip
                 
             - name: Upload Artifacts
               uses: actions/upload-artifact@v2
