--- a/.github/workflows/build_and_deploy_lambda.yml
+++ b/.github/workflows/build_and_deploy_lambda.yml
@@ -37,13 +37,22 @@ jobs:
             contents: read
         steps:
             - uses: FranzDiebold/github-env-vars-action@v2.1.0
+                
+            - name: Checkout
+              uses: actions/checkout@v2
 
             - name: Setup Node.js
               uses: actions/setup-node@v2
               with:
                 node-version: '16'
-            - name: Checkout
-              uses: actions/checkout@v2
+
+            - name: Cache Node.js modules
+              uses: actions/cache@v2
+              with:
+                path: ~/.npm  # npm cache files are stored in `~/.npm` on Linux/macOS
+                key: ${{ runner.os }}-node-${{ hashFiles('**/package-lock.json') }}
+                restore-keys: |
+                  ${{ runner.os }}-node-
 
             - name: Install dependencies
               run: npm install
