--- a/.github/workflows/pull-request.yml
+++ b/.github/workflows/pull-request.yml
@@ -172,74 +172,92 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v3
 
-      - name: Configure AWS Credentials
-        uses: aws-actions/configure-aws-credentials@v3
+      - name: Restore Event Handler Artifact
+        uses: actions/cache@v2
         with:
-          role-to-assume: arn:aws:iam::816923827429:role/ClashBotGitHubUser
-          aws-region: us-east-1
+          path: event-handler.zip
+          key: event-handler-lambda-${{ github.run_id }}
+          restore-keys: |
+            event-handler-lambda-
 
-      - name: Setup Terraform
-        uses: hashicorp/setup-terraform@v1
+      - name: Restore Event Publisher Artifact
+        uses: actions/cache@v2
         with:
-          cli_config_credentials_token: ${{ secrets.TF_API_TOKEN }}
+          path: event-handler.zip
+          key: event-publisher-lambda-${{ github.run_id }}
+          restore-keys: |
+            event-publisher-lambda-
 
-      - name: Terraform Format
-        id: fmt
-        run: terraform fmt -check
+      
 
-      - name: Terraform Init
-        id: init
-        run: terraform init -backend-config=backend-configs/${{ vars.ENVIRONMENT }}.remote.tfbackend
+      # - name: Configure AWS Credentials
+      #   uses: aws-actions/configure-aws-credentials@v3
+      #   with:
+      #     role-to-assume: arn:aws:iam::816923827429:role/ClashBotGitHubUser
+      #     aws-region: us-east-1
 
-      - name: Terraform Validate
-        id: validate
-        run: terraform validate -no-color
+      # - name: Setup Terraform
+      #   uses: hashicorp/setup-terraform@v1
+      #   with:
+      #     cli_config_credentials_token: ${{ secrets.TF_API_TOKEN }}
 
-      - name: Apply
-        id: apply
-        env:
-          TF_VAR_region: us-east-1
-          TF_VAR_environment: ${{ vars.ENVIRONMENT }}
-          TF_VAR_s3_bucket_name: ${{ vars.S3_BUCKET_NAME }}
-          TF_VAR_event_publisher_artifact_path: artifacts/${{ vars.ENVIRONMENT }}/${{ github.run_number }}/event-publisher.zip
-          TF_VAR_event_handler_artifact_path: artifacts/${{ vars.ENVIRONMENT }}/${{ github.run_number }}/event-handler.zip
-          TF_VAR_create_team_artifact_path: artifacts/${{ vars.ENVIRONMENT }}/${{ github.run_number }}/create-team.zip
-          TF_VAR_retrieve_teams_artifact_path: artifacts/${{ vars.ENVIRONMENT }}/${{ github.run_number }}/retrieve-teams.zip
-          TF_VAR_tournament_eligibility_lambda_artifact_path: artifacts/${{ vars.ENVIRONMENT }}/${{ github.run_number }}/is-tournament-eligible.zip
-          TF_VAR_sqs_batch_size: "1"
-        run: terraform apply -no-color -input=false --auto-approve
+      # - name: Terraform Format
+      #   id: fmt
+      #   run: terraform fmt -check
 
-      - name: Update Pull Request
-        uses: actions/github-script@v6.1.0
-        if: github.event_name == 'pull_request'
-        env:
-          APPLY: "terraform\n${{ steps.apply.outputs.stdout }}"
-        with:
-          github-token: ${{ secrets.GITHUB_TOKEN }}
-          script: |
-            const output = `Clash Bot Workflow - Apply
-            #### Terraform Format and Style 🖌\`${{ steps.fmt.outcome }}\`
-            #### Terraform Initialization ⚙️\`${{ steps.init.outcome }}\`
-            #### Workflow Apply 📖\`${{ steps.apply.outcome }}\`
-            #### Terraform Validation 🤖\`${{ steps.validate.outcome }}\`
+      # - name: Terraform Init
+      #   id: init
+      #   run: terraform init -backend-config=backend-configs/${{ vars.ENVIRONMENT }}.remote.tfbackend
 
-            <details><summary>Show Run</summary>
+      # - name: Terraform Validate
+      #   id: validate
+      #   run: terraform validate -no-color
 
-            #### Workflow Apply
-            \`\`\`\n
-            ${process.env.APPLY}
-            \`\`\`
+      # - name: Apply
+      #   id: apply
+      #   env:
+      #     TF_VAR_region: us-east-1
+      #     TF_VAR_environment: ${{ vars.ENVIRONMENT }}
+      #     TF_VAR_s3_bucket_name: ${{ vars.S3_BUCKET_NAME }}
+      #     TF_VAR_event_publisher_artifact_path: artifacts/${{ vars.ENVIRONMENT }}/${{ github.run_number }}/event-publisher.zip
+      #     TF_VAR_event_handler_artifact_path: artifacts/${{ vars.ENVIRONMENT }}/${{ github.run_number }}/event-handler.zip
+      #     TF_VAR_create_team_artifact_path: artifacts/${{ vars.ENVIRONMENT }}/${{ github.run_number }}/create-team.zip
+      #     TF_VAR_retrieve_teams_artifact_path: artifacts/${{ vars.ENVIRONMENT }}/${{ github.run_number }}/retrieve-teams.zip
+      #     TF_VAR_tournament_eligibility_lambda_artifact_path: artifacts/${{ vars.ENVIRONMENT }}/${{ github.run_number }}/is-tournament-eligible.zip
+      #     TF_VAR_sqs_batch_size: "1"
+      #   run: terraform apply -no-color -input=false --auto-approve
 
-            </details>
+      # - name: Update Pull Request
+      #   uses: actions/github-script@v6.1.0
+      #   if: github.event_name == 'pull_request'
+      #   env:
+      #     APPLY: "terraform\n${{ steps.apply.outputs.stdout }}"
+      #   with:
+      #     github-token: ${{ secrets.GITHUB_TOKEN }}
+      #     script: |
+      #       const output = `Clash Bot Workflow - Apply
+      #       #### Terraform Format and Style 🖌\`${{ steps.fmt.outcome }}\`
+      #       #### Terraform Initialization ⚙️\`${{ steps.init.outcome }}\`
+      #       #### Workflow Apply 📖\`${{ steps.apply.outcome }}\`
+      #       #### Terraform Validation 🤖\`${{ steps.validate.outcome }}\`
 
-            *Pushed by: @${{ github.actor }}, Action: \`${{ github.event_name }}\`*`;
+      #       <details><summary>Show Run</summary>
 
-            github.rest.issues.createComment({
-              issue_number: context.issue.number,
-              owner: context.repo.owner,
-              repo: context.repo.repo,
-              body: output
-            })
+      #       #### Workflow Apply
+      #       \`\`\`\n
+      #       ${process.env.APPLY}
+      #       \`\`\`
+
+      #       </details>
+
+      #       *Pushed by: @${{ github.actor }}, Action: \`${{ github.event_name }}\`*`;
+
+      #       github.rest.issues.createComment({
+      #         issue_number: context.issue.number,
+      #         owner: context.repo.owner,
+      #         repo: context.repo.repo,
+      #         body: output
+      #       })
  
       # Commenting for now until I can cut down on graph size
       # - name: Install Graphviz
