--- a/.github/workflows/pull-request.yml
+++ b/.github/workflows/pull-request.yml
@@ -237,11 +237,9 @@ jobs:
         with:
           github-token: ${{ secrets.GITHUB_TOKEN }}
           script: |
-            const output = `Clash Bot Workflow - Apply
-            #### Terraform Format and Style 🖌\`${{ steps.fmt.outcome }}\`
-            #### Terraform Initialization ⚙️\`${{ steps.init.outcome }}\`
-            #### Workflow Apply 📖\`${{ steps.apply.outcome }}\`
-            #### Terraform Validation 🤖\`${{ steps.validate.outcome }}\`
+            const output = `# Clash Bot Workflow PR Details
+
+            ## Lambda Function Versions used
 
             | Lambda Function | Artifact Version |
             | --------------- | ---------------- |
@@ -250,6 +248,11 @@ jobs:
             | Create Team | ${{ steps.createTeamArtifact.outputs.version }} |
             | Retrieve Teams | ${{ steps.retrieveTeamsArtifact.outputs.version }} |
             | Is Tournament Eligible | ${{ steps.isTournamentEligibleArtifact.outputs.version }} |
+
+            #### Terraform Format and Style 🖌\`${{ steps.fmt.outcome }}\`
+            #### Terraform Initialization ⚙️\`${{ steps.init.outcome }}\`
+            #### Workflow Apply 📖\`${{ steps.apply.outcome }}\`
+            #### Terraform Validation 🤖\`${{ steps.validate.outcome }}\`
 
             <details><summary>Show Run</summary>
 
